--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -192,7 +192,7 @@
 .footer{
   text-align: center;
   min-height: 200px;
-  background-color: #fff;
+  background-color: #f5f5f2;
   padding: 15px 0;
   color: #000;
   font-size: 14px;
@@ -265,6 +265,19 @@
 .width-100 {
     width: 100%;
   }
+
+.space-20 {
+  margin-top: 20px;
+}
+
+.space-30 {
+  margin-top: 30px;
+}
+
+
+body {
+  background-color: #f5f5f2;
+}
 
   //alert
 
