--- a/app/views/warehouse/products/index.html.erb
+++ b/app/views/warehouse/products/index.html.erb
@@ -1,3 +1,33 @@
+<div class="row">
+    <div class="col-md-8 col-md-offset-2">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="pwd space-30">
+                    <p style="margin-left:15px;">首页／产品</p>
+                </div>
+                <div class="col-md-8 space-20">
+                    <div class="cpad">
+                        <%= link_to root_path do %>
+                            <img src="https://ww2.sinaimg.cn/large/006tNbRwly1fh95eocfahj30g307ojso.jpg" alt="">
+                        <% end %>
+                    </div>
+                    <div class="cpad" style="margin-top:10px;">
+                        <%= link_to root_path do %>
+                            <img src="https://ww4.sinaimg.cn/large/006tNbRwly1fh95g6nevlj30fz07kjsp.jpg" alt="">
+                        <% end %>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="cpad-v space-20">
+                        <%= link_to root_path do %>
+                            <img src="https://ww1.sinaimg.cn/large/006tNbRwly1fh95gew1oqj30860fh3zq.jpg" alt="">
+                        <% end %>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <ul>
     <li><%= link_to("网桥", products_path(:category => "网桥")) %></li>
     <li><%= link_to("POE", products_path(:category => "POE")) %></li>
