--- a/app/assets/stylesheets/warehouse/products.scss
+++ b/app/assets/stylesheets/warehouse/products.scss
@@ -1,3 +1,36 @@
 .pwd {
   color: #999999;
 }
+
+
+.header {
+  text-align: center;
+  color: #333333;
+  font-size: 30px;
+  font-weight: 200;
+}
+
+.header-hr {
+  margin-top: 37px;
+  margin-bottom: 20px;
+  border: 0;
+  border-top: 1px solid #e6e6e6;
+}
+
+.cp-title  {
+  text-align: left;
+  color: #333333;
+  font-size: 18px;
+  font-weight: 200;
+}
+
+.cp-title-2 {
+  text-align: left;
+  color: #666666;
+  font-size: 16px;
+  font-weight: 200;
+}
+
+.left-15 {
+  margin-left:15px;
+}
