--- a/app/views/warehouse/products/index.html.erb
+++ b/app/views/warehouse/products/index.html.erb
@@ -1,9 +1,10 @@
+<!-- 主推产品广告 -->
 <div class="row">
     <div class="col-md-8 col-md-offset-2">
         <div class="container-fluid">
             <div class="row">
                 <div class="pwd space-30">
-                    <p style="margin-left:15px;">首页／产品</p>
+                    <p class="left-15">首页／产品</p>
                 </div>
                 <div class="col-md-8 space-20">
                     <div class="cpad">
@@ -28,23 +29,46 @@
         </div>
     </div>
 </div>
+<!-- 产品系列 -->
+<div class="row">
+    <div class="col-md-8 col-md-offset-2">
+        <div class="container-fluid">
+            <div class="row space-50">
+                <div class="col-md-4">
+                    <hr class="header-hr">
+                </div>
+                <div class="col-md-4 ">
+                    <h2 class="header">Convolum 系列</h2>
+                </div>
+                <div class="col-md-4">
+                    <hr class="header-hr">
+                </div>
+            </div>
+        </div>
+        <!-- aw -->
+        <div class="container-fluid">
+            <div class="row space-30">
+                <h3 class="cp-title left-15">AW系列 <span class="cp-title-2 left-15">性能设计 科技外观</span></h3>
+            </div>
+            <div class="row space-30">
+                <% @productsaw.each do |product| %>
+                    <div class="col-xs-6 col-md-3">
+                        <%= link_to product_path(product) do  %>
+                            <% if product.photos.present? %>
+                                <%= image_tag(product.photos[0].image.thumb.url , class: "thumbnail") %>
+                            <% else %>
+                                <%= image_tag("http://placehold.it/200x200&text=No Pic") %>
+                            <% end %>
+                        <% end %>
+                        <%= product.title %> ¥ <%= product.price%>
+                    </div>
+                <% end %>
+            </div>
+        </div>
+    </div>
+</div>
 <ul>
     <li><%= link_to("网桥", products_path(:category => "网桥")) %></li>
     <li><%= link_to("POE", products_path(:category => "POE")) %></li>
     <li><%= link_to("AP", products_path(:category => "AP")) %></li>
 </ul>
-<div class="row">
-    <% @products.each do |product| %>
-        <div class="col-xs-6 col-md-3">
-            <%= link_to product_path(product) do  %>
-                <% if product.photos.present? %>
-                    <%= image_tag(product.photos[0].image.thumb.url , class: "thumbnail") %>
-                <% else %>
-                    <%= image_tag("http://placehold.it/200x200&text=No Pic") %>
-                <% end %>
-            <% end %>
-            <%= product.title %> ¥ <%= product.price%>
-        </div>
-    <% end %>
-</div>
-<%= will_paginate @products , class: "apple_pagination"%>
