--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -13,7 +13,12 @@
         <%= f.input :price ,:label => "价格"%>
     </div>
     <div class="group">
-        <%= f.input :category,:label => "分类" %>
+        <% Product::CATEGORY.each do |category| %>
+            <label>
+                <%= f.radio_button :category, category %>
+                <%= t(category, :scope => "product.category") %>
+            </label>
+        <% end %>
     </div>
     <div class="group">
         <%= f.file_field :image, :multiple => true, name: "photos[image][]" %>（"请上传5张图片"）
