--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -1,39 +1,2 @@
-<h2> Edit Product </h2>
-<%= simple_form_for [:admin, @product] do |f| %>
-    <div class="group">
-        <%= f.input :title ,:label => "产品名称"%>
-    </div>
-    <div class="group">
-        <%= f.input :description ,:label => "产品描述"%>
-    </div>
-    <div class="group">
-        <%= f.input :quantity ,:label => "数量"%>
-    </div>
-    <div class="group">
-        <%= f.input :price ,:label => "价格"%>
-    </div>
-    <div class="group">
-        <% Product::CATEGORY.each do |category| %>
-            <label>
-                <%= f.radio_button :category, category %>
-                <%= t(category, :scope => "product.category") %>
-            </label>
-        <% end %>
-    </div>
-    <div class="group">
-        <% if @product.photos.present? %>
-            <span>目前商品图</span><br>
-            <% @product.photos.each do |p| %>
-                <%= image_tag p.image.thumb.url %><br />
-            <% end %>
-        <% end %>
-        <%= f.file_field :image, :multiple => true, name: "photos[image][]" %>（"请上传5张图片"）
-    </div>
-    <div class="group">
-        <%= f.input :attachment ,:label => "产品PDF"%>
-    </div>
-    <div class="group">
-        <%= f.input :is_hidden ,:label => "勾选为隐藏"%>
-    </div>
-    <%= f.submit "提交", data: { disable_with: "Submitting..." } %>
-<% end %>
+<h2><span class="fa fa-pencil-square-o"></span>编辑产品</h2>
+<%= render('form') %>
