--- a/app/assets/stylesheets/carts.scss
+++ b/app/assets/stylesheets/carts.scss
@@ -1,3 +1,89 @@
 // Place all the styles related to the carts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.cart-item-box {
+  text-align: left;
+  margin: 30px 0 5px 0;
+
+
+  img {
+    max-width: 100px;
+  }
+
+
+  hr{
+    height: 1px;
+    background-color: #eee !important;
+    margin: 7.5px 0 -2.5px 0;
+  }
+
+  .name {
+     padding-top: 40px;
+  }
+
+  .price {
+ padding-top: 40px;
+  }
+  .quantity {
+ padding-top: 36px;
+  }
+
+.count {
+  padding-top: 40px;
+}
+  .remove {
+padding-top: 40px;
+  }
+
+  input {
+    width: 50px;
+    text-align: center;
+    border: 1px solid #ccc;
+    border-radius: 2.5px;
+    outline: none;
+  }
+
+  input:focus {
+    border: 1px solid #000;
+  }
+}
+
+
+/*===== Content 網站-內容區塊排版設定 =====*/
+.content-box {
+  min-height: 450px;
+
+  h3 {
+    color: #2c3e50;
+    letter-spacing: 2px;
+    margin-top: 35px;
+  }
+
+  hr {
+    height: 1.5px;
+    background-color: #666 !important;
+    margin-bottom: 15px;
+  }
+
+  .btn-default {
+    margin: 10px 0 0 -10px;
+  }
+
+  .btn-default:hover {
+    border-color: #eb5424;
+  }
+}
+
+.cart-checkout-box {
+  text-align: center;
+  margin: 30px 0 5px 0;
+  padding: 50px;
+  background-color: #EEEEEE;
+
+  .notice {
+    margin: 20px 0 0 0;
+    text-align: left;
+    color: #999999;
+  }
+}
